grammar.js
    program: $ => repeat($._statement),

    //
    // Statements
    //
    _statement: $ => seq(
      choice(
        $._expression,
        $._declaration,
        $._loop_statement,
        $.if_statement,
        $.guard_statement,
        $.switch_statement,
        $.labeled_statement,
        $.break_statement,
        $.continue_statement,
        $.fallthrough_statement,
        $.return_statement,
        $.throw_statement,
        $.defer_statement,
        $.do_statement,
        $.build_configuration_statement,
        $.diagnostic_statement,
        $.line_control_statement),
      choice(';', /\n/),
    ),

    _code_block: $ => seq('{', repeat($._statement), '}'),

    _pattern_initializer: $ => seq(
      field('name', $._pattern),
      optional(field('type', $._type_annotation)),
      optional(seq('=', field('value', $._expression)))
    ),

    variable_declaration: $ => seq(
      $._variable_declaration_head,
      choice(
        commaSep1($._pattern_initializer),
        seq(
          field('name', $._variable_name),
          field('type', $._type_annotation),
          choice($._code_block, $._getter_setter_keyword_block)
        )
      )
    ),

    _variable_declaration_head: $ => seq(optional($.modifier), 'var'),

    _variable_name: $ => $.identifier,

    _getter_setter_keyword_block: $ => seq(
      '{',
      choice(seq($._getter_keyword_clause, optional($._setter_keyword_clause)),
      seq($._setter_keyword_clause, $._getter_keyword_clause)),
      '}'
    ),

    number: $ => {
      const decimal_digits = /\d(_?\d)*/
      const signed_operators = optional(/[-\+]/)
      const signed_integer = seq(signed_operators, decimal_digits)
      const decimal_integer_literal = seq(
        choice(
          '0',
          seq(
            optional('0'), /[1-9]/,
            optional(seq(optional('_'), decimal_digits))
          )
        )
      )
      const hex_literal = seq(
        choice('0x', '0X'),
        /[\da-fA-F](_?[\da-fA-F])*/
      )

      const exponent_part = seq(choice('e', 'E'), signed_integer)
      const binary_literal = seq(choice('0b', '0B'), /[0-1](_?[0-1])*/)
      const octal_literal = seq(choice('0o', '0O'), /[0-7](_?[0-7])*/)
      const bigint_literal = seq(choice(hex_literal, binary_literal, octal_literal, decimal_digits), 'n')

      const decimal_literal = choice(
        seq(signed_operators, decimal_integer_literal, '.', optional(decimal_digits), optional(exponent_part)),
        seq(signed_operators, '.', decimal_digits, optional(exponent_part)),
        seq(signed_operators, decimal_integer_literal, exponent_part),
        seq(signed_operators, decimal_digits),
      )

      return token(choice(
        hex_literal,
        decimal_literal,
        binary_literal,
        octal_literal,
        bigint_literal
      ))
    },

    _type_annotation: $ => seq(':', choice($.type, $.array_type, $.dictionary_type)),

    identifier: $ => {
      const _identifier_head = /[A-Za-z_]/;
      const _identifier_characters = repeat(choice(_identifier_head, /[0-9]/));

      return token(
        choice(
          seq(_identifier_head, optional(_identifier_characters)),
          seq('`', _identifier_head, optional(_identifier_characters), '`')
        )
      );
    },
